# mlx90640

./: CMakeLists.txt  MLX90640_conf.h  Makefile  README.md  main.c  mlx90640.pc.in
Include/mlx90640-driver/: MLX90640_I2C_Driver.h  mlx90640.h
Source/mlx90640-driver/: MLX90640_API.c  MLX90640_ESP32_I2C_Driver.c  MLX90640_I2C_Driver.c  MLX90640_LINUX_I2C_Driver.c  MLX90640_PIGPIO_I2C_Driver.c  MLX90640_SWI2C_Driver.c
